--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.2.0+3
   flutter_rating_bar: ^4.0.1
+  syncfusion_flutter_charts: ^26.2.4
 
 dev_dependencies:
   flutter_test:
